   function.  This allows the subprocess to be started in a specified
   directory.
8. src/slrline.c: Added rline_get_last_key_function, which returns the
   last slang readline key function.
9. */Makefile.in: Commmened out "DESTDIR=" lines (Marcel Telka).
10. slsh/lib/rline.sl: Added rline_edit_history (allows the history to
    be edited in an external editor) and rline_up/down_hist functions.

{{{ Previous Versions

Changes since 2.2.1
1. src/slsmg.c: Call SLutf8_enable if UTF8 mode has not been setup.
2. src/slutty.c:  Allow the hook that gets called when the read
   function gets interrupted to change the read file descriptor.
   Before, if this happened, the SLang_getkey function would return
   SLANG_GETKEY_ERROR.
3. lib/slsh/print.sl: Turn off buffering of the pager pipe.
4. modules/tm/*.tm: A couple of typos corrected (John Houck)
5. src/slmath.c: The round function was not correctly rounding values
   between 0.5 and 1.0.
6. src/slstdio.c,slclass.c: If a call to fwrite produces errno=EPIPE,
   then do not bother trying the write again.
7. modules/fork-module.c:  Use WIFCONTINUED only if it is defined.
8. slsh/Makefile.in: Change the order of the libraries such that the
   newly built ones will be found first.  (Markus Hennecke)
9. src/slagetput.inc: Avoid possible access violation when using a
   range array as an index.
10. doc/tm/rtl/lists.tm: Documented the optional argument to the
    list_to_array function (Manfred Hanke).

Changes since 2.2.0
1. modules/socket-module.c: glibc-2.8 removed the h_addr macro.
2. src/slclass.c: Call clearerr before performing the
   stdio_fread/fwrite functions.
3. src/slstdio.c: typeof in the fputs intrinsic fixed (n instead of dn
   was compared to 0).
4. src/slscanf.c: sscanf will treat NaN and Inf in a case-insensitive
   manner.  Also, the NaN([a-zA-Z0-9]*) form is also supported.
5. src/slang.h: SLclass_set_aelem_init_function was missing from the
   API.